Fix background:fixed issues on mobile

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -2,13 +2,13 @@
 @import "./ecommerce";
 
 .portfolio-html {
-  height: 100%;
+  height: 100vh;
 }
 
 .portfolio-body  {
   background-color: $main-background;
   font-family: $portfolio-font;
-  height: 100%;
+  height: 100vh;
 }
 
 nav.navbar.portfolio-navbar {
@@ -85,12 +85,16 @@ nav.navbar.portfolio-navbar {
 .parallax {
   background-image: url("assets/images/portfolio-images/portfolio-background.jpg");
   height: 100vh;
-  background-attachment: fixed;
+  background-attachment: initial;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 25vh;
   filter: blur(0);
+  @include media-breakpoint-up(lg) {
+    background-attachment: fixed;
+  }
+
 }
 
 .row.portfolio-top-row {
